# uap-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: publish.yml  py-checks.yml  py-tests.yml  pychecks.yaml  pyo3-wheels.yml  release-pr.yml  rust.yml  zizmor.yml
regex-filtered/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
regex-filtered/benches/: regex.rs
regex-filtered/examples/: atomizer.rs  bench.rs  bench_regex.rs  matchindex.rs  matchindex2.rs
regex-filtered/re2/: Makefile  atomizer.cpp  bench.cpp
regex-filtered/samples/: devices.regexes
regex-filtered/src/: int_set.rs  lib.rs  mapper.rs  model.rs
scripts/: devices  matchindex
ua-parser/: CHANGELOG.md  Cargo.toml  README.md
ua-parser-py/: Cargo.toml  pyproject.toml  tox.ini
ua-parser-py/src/: lib.rs
ua-parser-py/tests/: test_device.py  test_os.py  test_ua.py
ua-parser/examples/: bench.rs
ua-parser/src/: lib.rs  resolvers.rs
ua-parser/tests/: integration.rs
