[package]
name = "regex-filtered"
version = "0.1.1"
edition = "2021"
description = "Efficiently check an input against a large number of patterns"
keywords = ["regex", "filter", "FilteredRE2", "multiple", "prefilter"]
license = "BSD-3-Clause"

documentation = "https://docs.rs/regex-filtered/"
homepage = "https://github.com/ua-parser/uap-rust/tree/main/regex-filtered"
repository = "https://github.com/ua-parser/uap-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
indexmap = "2.2.6"
itertools = "0.13.0"
regex = "1.10.4"
regex-syntax = "0.8.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "regex"
harness = false
