[package]
name = "regex-filtered"
version = "0.2.0"
edition = "2021"
description = "Efficiently check an input against a large number of patterns"
keywords = ["regex", "filter", "FilteredRE2", "multiple", "prefilter"]
license = "BSD-3-Clause"

documentation = "https://docs.rs/regex-filtered/"
homepage = "https://github.com/ua-parser/uap-rust/tree/main/regex-filtered"
repository = "https://github.com/ua-parser/uap-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
itertools = "0.14.0"
regex = "1.11.1"
regex-syntax = "0.8.5"

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
criterion = "0.5.1"

[[bench]]
name = "regex"
harness = false
