[package]
name = "ua-parser"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust implementation of the User Agent String Parser project"
keywords = ["ua_parser", "user-agent", "user-agent-parser"]

documentation = "https://docs.rs/ua-parser/"
homepage = "https://github.com/ua-parser/uap-rust/"
repository = "https://github.com/ua-parser/uap-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
regex-filtered = { version = "0.2.0", path = "../regex-filtered" }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
